* * * * * * Beta10 (tag: jdom_1_0_b10) from Beta9 * * * * * *

PARENT AND CONTENT
------------------

Added a new Parent interface and a new Content abstract class.  Parent is
implemented by Document and Element.  Content is extended by Element, Comment,
DocType, EntityRef, ProcessingInstruction, and Text (CDATA).

Parent has methods (* means new):
  Parent addContent(Content child);
  * Parent addContent(Collection collection);
  * Parent addContent(int index, Content child);
  * Parent addContent(int index, Collection collection);
  * List cloneContent();
  * void canContain(Content, int);
  List getContent();
  List getContent(Filter filter);
  * Content getContent(int index);
  * int getContentSize();
  * Iterator getDescendants()
  * Iterator getDescendants(Filter)
  * Document getDocument()
  * Parent getParent()
  * int indexOf(Content)
  * List removeContent();
  boolean removeContent(Content child);
  * List removeContent(Filter filter);
  * Content removeContent(int index);
  Parent setContent(Content child);
  Parent setContent(Collection collection);
  * Parent setContent(int index, Content child);
  * Parent setContent(int index, Collection collection);
  Object clone();

Content has public methods:
  Content detach();
  Document getDocument();
  Parent getParent();
  * String getValue();
  Object clone();

The new methods on Parent are pretty self explanatory. A few methods that used
to require getting the content List now work on Parent itself for convenience
(tired of all those FAQs).  The cloneContent() and removeContent() calls
should be especially helpful.  The getDescendants() methods is great in
providing a mechanism to walk the entire tree from this item down using an
optional filter.

The getValue() method in Content is defined to return the XPath 1.0 string
value of the element.  The getText() methods in Element are left unchanged.

A subtle change is that getParent() now returns a Parent type which is its