@@ -1,6 +1,6 @@
 /*--
 
- $Id: XMLOutputter.java,v 1.102 2004/02/15 20:05:00 jhunter Exp $
+ $Id: XMLOutputter.java,v 1.103 2004/02/17 02:29:24 jhunter Exp $
 
  Copyright (C) 2000-2004 Jason Hunter & Brett McLaughlin.
  All rights reserved.
@@ -98,7 +98,7 @@ import org.jdom.*;
  * configured with <code>{@link Format#setExpandEmptyElements}</code> to cause
  * them to be expanded to &lt;empty&gt;&lt;/empty&gt;.
  *
- * @version $Revision: 1.102 $, $Date: 2004/02/15 20:05:00 $
+ * @version $Revision: 1.103 $, $Date: 2004/02/17 02:29:24 $
  * @author  Brett McLaughlin
  * @author  Jason Hunter
  * @author  Jason Reid
@@ -113,7 +113,7 @@ import org.jdom.*;
 public class XMLOutputter implements Cloneable {
 
     private static final String CVS_ID =
-      "@(#) $RCSfile: XMLOutputter.java,v $ $Revision: 1.102 $ $Date: 2004/02/15 20:05:00 $ $Name:  $";
+      "@(#) $RCSfile: XMLOutputter.java,v $ $Revision: 1.103 $ $Date: 2004/02/17 02:29:24 $ $Name:  $";
 
     // For normal output
     protected Format userFormat = Format.getRawFormat();
@@ -141,55 +141,6 @@ public class XMLOutputter implements Cloneable {
     public XMLOutputter(Format format) {
         userFormat = format;
         currentFormat = userFormat;
-    }
-
-    /**
-     * This will create an <code>XMLOutputter</code> with the given indent
-     * added but no new lines added; all whitespace from the element text
-     * content is included as well.
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param indent  the indent string, usually some number of spaces
-     */
-    public XMLOutputter(String indent) {
-        userFormat.setIndent(indent);
-    }
-
-    /**
-     * This will create an <code>XMLOutputter</code> with the given indent
-     * that prints newlines only if <code>newlines</code> is
-     * <code>true</code>; all whitespace from the element text content is
-     * included as well.
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param indent the indent <code>String</code>, usually some number
-     *        of spaces
-     * @param newlines <code>true</code> indicates new lines should be
-     *                 printed, else new lines are ignored (compacted).
-     */
-    public XMLOutputter(String indent, boolean newlines) {
-        userFormat.setIndent(indent);
-        if (newlines == false) userFormat.setIndent(null);
-    }
-
-    /**
-     * This will create an <code>XMLOutputter</code> with
-     * the given indent and new lines printing only if
-     * <code>newlines</code> is <code>true</code>, and encoding format
-     * <code>encoding</code>.
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param indent the indent <code>String</code>, usually some number
-     *        of spaces
-     * @param newlines <code>true</code> indicates new lines should be
-     *                 printed, else new lines are ignored (compacted).
-     * @param encoding set encoding format.  Use XML-style names like
-     *                 "UTF-8" or "ISO-8859-1" or "US-ASCII"
-     */
-    public XMLOutputter(String indent, boolean newlines, String encoding) {
-        userFormat.setIndent(indent);
-        if (newlines == false) userFormat.setIndent(null);
-        userFormat.setEncoding(encoding);
     }
 
     /**
@@ -223,164 +174,6 @@ public class XMLOutputter implements Cloneable {
      */
     public Format getFormat() {
         return userFormat;
-    }
-
-    /**
-     * This will set the newline separator (<code>lineSeparator</code>).
-     * The default is <code>\r\n</code>. Note that if the "newlines"
-     * property is false, this value is irrelevant.  To make it output
-     * the system default line ending string, call
-     * <code>setLineSeparator(System.getProperty("line.separator"))</code>
-     *
-     * <p>
-     * To output "UNIX-style" documents, call
-     * <code>setLineSeparator("\n")</code>.  To output "Mac-style"
-     * documents, call <code>setLineSeparator("\r")</code>.  DOS-style
-     * documents use CR-LF ("\r\n"), which is the default.
-     * </p>
-     *
-     * <p>
-     * Note that this only applies to newlines generated by the
-     * outputter.  If you parse an XML document that contains newlines
-     * embedded inside a text node, and you do not call
-     * <code>setTextNormalize</code>, then the newlines will be output
-     * verbatim, as "\n" which is how parsers normalize them.
-     * </p>
-     *
-     * @see #setNewlines(boolean)
-     * @see #setTextNormalize(boolean)
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param separator <code>String</code> line separator to use.
-     */
-    public void setLineSeparator(String separator) {
-        userFormat.setLineSeparator(separator);
-    }
-
-    /**
-     * Sets whether newlines (<code>lineSeparator</code>) should
-     * be added during output as an attempt to beautify code without
-     * pre-existing whitespace.  Usually called in conjunction with {@link
-     * #setIndent}.
-     *
-     * @deprecated Deprecated in Beta 10 since newlines will now just be
-     * added if indent is non-null
-     *
-     * @see #setLineSeparator(String)
-     * @param newlines <code>true</code> indicates new lines should be
-     *                 added for beautification.
-     */
-    public void setNewlines(boolean newlines) {
-    }
-
-    /**
-     * Sets the output encoding.  The name should be an accepted XML
-     * encoding.
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param encoding the encoding format.  Use XML-style names like
-     *                 "UTF-8" or "ISO-8859-1" or "US-ASCII"
-     */
-    public void setEncoding(String encoding) {
-        userFormat.setEncoding(encoding);
-    }
-
-    /**
-     * This will set whether the XML declaration
-     * (<code>&lt;&#063;xml version="1&#046;0"
-     * encoding="UTF-8"&#063;&gt;</code>)
-     * includes the encoding of the document. It is common to omit
-     * this in uses such as WML and other wireless device protocols.
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param omitEncoding <code>boolean</code> indicating whether or not
-     *        the XML declaration should indicate the document encoding.
-     */
-    public void setOmitEncoding(boolean omitEncoding) {
-        userFormat.setOmitEncoding(omitEncoding);
-    }
-
-    /**
-     * This will set whether the XML declaration
-     * (<code>&lt;&#063;xml version="1&#046;0"&#063;gt;</code>)
-     * will be omitted or not. It is common to omit this in uses such
-     * as SOAP and XML-RPC calls.
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param omitDeclaration <code>boolean</code> indicating whether or not
-     *        the XML declaration should be omitted.
-     */
-    public void setOmitDeclaration(boolean omitDeclaration) {
-        userFormat.setOmitDeclaration(omitDeclaration);
-    }
-
-    /**
-     * This will set whether empty elements are expanded from
-     * <code>&lt;tagName/&gt;</code> to
-     * <code>&lt;tagName&gt;&lt;/tagName&gt;</code>.
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param expandEmptyElements <code>boolean</code> indicating whether or not
-     *        empty elements should be expanded.
-     */
-    public void setExpandEmptyElements(boolean expandEmptyElements) {
-        userFormat.setExpandEmptyElements(expandEmptyElements);
-    }
-
-    /**
-     * This will set whether content between tags consisting of all
-     * whitespace is printed or trimmed.
-     *
-     * <p>Default: false </p>
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param trimAllWhite <code>boolean</code> true=>content consisting of
-     *                 only whitespace is not print, false=>use text verbatim
-     */
-    public void setTrimAllWhite(boolean trimAllWhite) {
-        userFormat.setTextMode(Format.TextMode.TRIM_FULL_WHITE);
-    }
-
-    /**
-     * This will set whether the text has leading/trailing whitespace
-     * trimmed.
-     *
-     * <p>Default: false </p>
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param textTrim <code>boolean</code> true=>trim the leading/trailing
-     *                 whitespace, false=>use text verbatim
-     */
-    public void setTextTrim(boolean textTrim) {
-        userFormat.setTextMode(Format.TextMode.TRIM);
-    }
-
-    /**
-     * This will set whether the text is output verbatim (false)
-     * or with whitespace normalized as per <code>{@link
-     * org.jdom.Element#getTextNormalize()}</code>.
-     *
-     * <p>Default: false </p>
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param textNormalize <code>boolean</code> true=>normalize the
-     *        whitespace, false=>use text verbatim
-     */
-    public void setTextNormalize(boolean textNormalize) {
-        userFormat.setTextMode(Format.TextMode.NORMALIZE);
-    }
-
-    /**
-     * This will set the indent <code>String</code> to use; this
-     * is usually a <code>String</code> of empty spaces. If you pass
-     * null, or the empty string (""), then no indentation will
-     * happen.  Default: none (null)
-     *
-     * @deprecated Deprecated in Beta 10, use the Format class instead
-     * @param indent <code>String</code> to use for indentation.
-     */
-    public void setIndent(String indent) {
-        userFormat.setIndent(indent);
     }
 
     // * * * * * * * * * * Output to a OutputStream * * * * * * * * * *
@@ -1725,111 +1518,4 @@ public class XMLOutputter implements Cloneable {
      * raise issues early though.
      */
 
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printAttributes(List attributes, Element parent,
-//                                   Writer out, NamespaceStack namespaces)
-//            throws IOException {
-//        printAttributes(out, attributes, parent, namespaces);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printCDATA(CDATA cdata, Writer out) throws IOException {
-//        printCDATA(out, cdata);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printComment(Comment comment, Writer out)
-//            throws IOException {
-//        printComment(out, comment);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printContentRange(List content, int start, int end,
-//                                     Writer out, int level,
-//                                     NamespaceStack namespaces)
-//            throws IOException {
-//        printContentRange(out, content, start, end, level, namespaces);
-//    }
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printDeclaration(Document doc, Writer out,
-//                                    String encoding) throws IOException {
-//        printDeclaration(out, doc, encoding);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printDocType(DocType docType, Writer out)
-//            throws IOException {
-//        printDocType(out, docType);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printElement(Element element, Writer out,
-//                                int level, NamespaceStack namespaces)
-//            throws IOException {
-//        printElement(out, element, level, namespaces);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printEntityRef(EntityRef entity, Writer out)
-//            throws IOException {
-//        printEntityRef(out, entity);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printProcessingInstruction(ProcessingInstruction pi,
-//                                              Writer out) throws IOException {
-//        printProcessingInstruction(out, pi);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printString(String str, Writer out) throws IOException {
-//        printString(out, str);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printText(Text text, Writer out) throws IOException {
-//        printText(out, text);
-//    }
-//
-//    /**
-//     * @deprecated Deprecated in beta 10, use the method with the same name
-//     * but different parameter order.
-//     */
-//    protected void printTextRange(List content, int start, int end,
-//                                  Writer out) throws IOException {
-//        printTextRange(out, content, start, end);
-//    }
 }
