@@ -1,3 +1,8 @@
+* * * * * * 1.0 (future tag: jdom_1_0) from Beta10 * * * * * *
+
+Removed all deprecated methods.
+
+
 * * * * * * Beta10 (tag: jdom_1_0_b10) from Beta9 * * * * * *
 
 PARENT AND CONTENT
